# Memory_Packer

./: Application.cpp  Application.h  CMakeLists.txt  gpch.h  main.cpp
Algorithms/: AlgorithmBase.h  Backtracking.cpp  Backtracking.h  BranchAndBound.cpp  BranchAndBound.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Greedy.cpp  Greedy.h
Core/: GameConfig.h  GridState.h  PlacementState.h  ScannerDB.h
Game/: Game.cpp  Game.h
Renderer/: ChartWidget.cpp  ChartWidget.h  GridRenderer.cpp  GridRenderer.h  Renderer.cpp  Renderer.h  UIPanel.cpp  UIPanel.h
Rendering/: ChartWidget.cpp  GridRenderer.cpp  UIPanel.cpp  UIPanel.h
